fix: issues in open/close nested nav lists on mobile and desktop

--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ html {
 }
 
 :hover {
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
+  transition: 0.05s;
+  -webkit-transition: 0.05s;
+  -moz-transition: 0.05s;
+  -ms-transition: 0.05s;
+  -o-transition: 0.05s;
 }
 
 a {
@@ -98,7 +98,6 @@ header {
   font-family: "Ubuntu", sans-serif;
   color: hsl(0, 0%, 100%);
   border-bottom-left-radius: var(--border-radius);
-  overflow-x: hidden;
 }
 
 header .btn {
@@ -223,20 +222,34 @@ header .container nav ul .head.active .arrow-light {
 }
 
 header .container nav ul .head .group {
-  height: 0;
+  background-color: #f2f2f2;
+  width: 130px;
+  position: absolute;
+  max-height: 0;
   overflow: hidden;
   padding: 0;
-  transition: 0.05s;
-  -moz-transition: 0.05s;
-  -ms-transition: 0.05s;
-  -o-transition: 0.05s;
-  -webkit-transition: 0.05s;
+  box-shadow: none;
   top: 30px;
   left: 50%;
+  transition: max-height 0.1s ease-out, padding 0.1s ease-out 0.05s;
+  -moz-transition: max-height 0.1s ease-out, padding 0.1s ease-out 0.05s;
+  -ms-transition: max-height 0.1s ease-out, padding 0.1s ease-out 0.05s;
+  -o-transition: max-height 0.1s ease-out, padding 0.1s ease-out 0.05s;
+  -webkit-transition: max-height 0.1s ease-out, padding 0.1s ease-out 0.05s;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 /* repeated here and in media */
 header .container nav ul .head.active .group {
-  height: fit-content;
+  max-height: 250px;
   top: 30px;
   left: 50%;
   transform: translateX(-50%);
@@ -256,11 +269,11 @@ header .container nav ul .head.active .group {
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   box-shadow: 1px 1px 5px 3px #0000001a;
-  transition: 0.1s;
-  -moz-transition: 0.1s;
-  -ms-transition: 0.1s;
-  -o-transition: 0.1s;
-  -webkit-transition: 0.1s;
+  transition: max-height 1s ease-out, padding 1s ease-out 0.2s;
+  -moz-transition: max-height 1s ease-out, padding 1s ease-out 0.2s;
+  -ms-transition: max-height 1s ease-out, padding 1s ease-out 0.2s;
+  -o-transition: max-height 1s ease-out, padding 1s ease-out 0.2s;
+  -webkit-transition: max-height 1s ease-out, padding 1s ease-out 0.2s;
 }
 header .container nav ul .head .group li {
   color: hsl(207, 13%, 34%);
@@ -390,11 +403,7 @@ header .container nav .btns .btn.signup:hover {
     font-size: 1.2em;
     color: hsl(208, 49%, 24%);
     padding-bottom: calc(var(--main-y-padding) / 4);
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
   }
-  /* header .container nav ul .head .group.active + h3 { */
   header .container nav ul .head.active {
     color: hsl(207, 13%, 34%);
   }
@@ -421,12 +430,15 @@ header .container nav .btns .btn.signup:hover {
     -o-transform: rotate(180deg);
   }
 
-  header .container nav ul .head.active .group {
-    position: relative;
+  header .container nav ul .head .group {
     left: 50%;
-    top: unset;
+    top: 10px;
     width: 300%;
     max-width: 425px;
+    position: relative;
+    max-height: 0;
+    overflow: hidden;
+    padding: 0;
     background-color: #f2f2f2;
     text-align: center;
     border-radius: 5px;
@@ -434,17 +446,19 @@ header .container nav .btns .btn.signup:hover {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    height: 0;
-    overflow: hidden;
-    padding: 0;
-    z-index: 115;
-    margin: 10px 0;
   }
+
   header .container nav ul .head:hover {
     text-decoration: none;
   }
-  header .container nav ul .head .group.active {
-    height: fit-content;
+  header .container nav ul .head.active .group.active {
+    top: 10px;
+    z-index: 115;
+    position: relative;
+    margin: 10px 0;
+    width: 300%;
+    max-width: 425px;
+    max-height: 250px;
     overflow: visible;
     padding: calc(var(--main-y-padding) / 2) 0;
   }
@@ -728,6 +742,7 @@ section:nth-of-type(3) img.mobile {
     width: 90%;
     max-width: 450px;
     margin-bottom: var(--main-y-margin);
+    z-index: -1;
   }
 
   section:nth-of-type(3) img.mobile {
